--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
     "vue": "^2.6.14"
   },
   "devDependencies": {
+    "core-js": "^3.22.1",
+    "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/runtime": "^7.17.9",
+    "@vue/babel-preset-jsx": "^1.2.4",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "@babel/runtime-corejs3": "^7.17.9",
-    "@babel/core": "^7.17.9",
     "babel-loader": "^8.2.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@vue/babel-preset-jsx": "^1.2.4",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
